--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* Login & Register */
 
 .form-container { 
@@ -20,10 +19,14 @@
 .form-container input {
   width: 100%;
   padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
+  display: inline;
   border: 1px solid #ccc;
   box-sizing: border-box;
+}
+
+.form-container .form-label {
+  /* font-size: 1.2em; */
+  margin: auto 0;
 }
 
 .form-container button {
@@ -53,5 +56,3 @@
   box-shadow: 0 0 10px rgba(179, 0, 255, 0.2) !important; 
   outline: none !important;
 }
-=======
->>>>>>> origin/main
