--- a/src/css/Calendar.css
+++ b/src/css/Calendar.css
@@ -1,7 +1,7 @@
 /* Calendar background and general style */
 @import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-body {
+/* body {
   margin: 0;
   padding: 0;
 }
@@ -9,7 +9,7 @@ body {
 .css-8f57v9 {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
-}
+} */
 
 .rbc-calendar {
   background-color: #ffffff;
